--- a/all.css
+++ b/all.css
@@ -64,43 +64,63 @@ h3 {
 
 /* || STYLE DES BOUTTONS ICI */
 .btn {
-   background-color: var(--white);
-   padding: 10px 30px;
-   border: 0px;
-   color: var(--dark);
-   font-size: 18px;
+   height: 50px;
+   width: 150px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition: all 0.8s ease;
    position: relative;
+   border: 2px solid var(--dark);
+   font-size: 18px;
+   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+   cursor: pointer;
 }
-.btn:before,
-.btn:after {
-   border-color: var(--white);
-   -webkit-transition: all 0.25s;
-   transition: all 0.5s;
-   border-style: solid;
-   border-width: 0;
-   content: '';
-   height: 24px;
+
+.btn::before,
+.btn::after {
    position: absolute;
-   width: 24px;
+   display: block;
+   content: '';
+   width: 100%;
+   height: 100%;
 }
-.btn:before {
-   border-left-width: 1px;
-   border-top-width: 1px;
-   left: -5px;
-   top: -5px;
+
+.btn {
+   border: none;
+   z-index: 10;
+}
+
+.btn a {
+   z-index: 10;
+   color: var(--dark);
 }
 
 .btn:after {
-   border-bottom-width: 1px;
-   border-right-width: 1px;
-   bottom: -5px;
-   right: -5px;
+   border: 2px solid var(--dark);
+   transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-.btn:hover:before,
+
+.btn:before {
+   width: 0;
+   height: 0;
+   transition: all 500ms ease;
+}
+
 .btn:hover:after {
-   height: 100%;
+   width: 0;
+   height: 0;
+   opacity: 0;
+}
+
+.btn:hover:before {
    width: 100%;
-   border-color: var(--blue);
+   height: 100%;
+   background-color: var(--dark);
+}
+
+.btn:hover a {
+   color: var(--white);
 }
 
 @media screen and (max-width: 768px) {
@@ -215,10 +235,11 @@ i.close-icon {
 .link::before {
    content: '';
    position: absolute;
-   bottom: 0;
+   bottom: -2px;
    left: 20px;
    width: 0;
    height: 4px;
+   border-radius: 50px;
    background-color: var(--blue);
    transition: var(--transition);
 }
@@ -414,6 +435,7 @@ i.close-icon {
 }
 .grid-article .content {
    justify-content: space-between;
+   margin-left: 10px;
 }
 .article.grid-article .article-img {
    width: 30%;
