--- a/post.css
+++ b/post.css
@@ -117,6 +117,48 @@
    font-size: 18px;
 }
 
+.other-posts {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   background-color: var(--white);
+   box-shadow: var(--shadow);
+   padding: 20px;
+   margin-top: 40px;
+   gap: 20px;
+}
+.other-posts article {
+   display: flex;
+   position: relative;
+}
+.other-details {
+   position: absolute;
+   inset: 0 0 0 0;
+   padding: 15px;
+   display: flex;
+   flex-direction: column;
+   justify-content: flex-end;
+}
+.other-tag {
+   /* padding: 2px 5px; */
+   font-size: 12px;
+   background-color: var(--blue);
+   width: 70px;
+   text-align: center;
+   border-radius: 3px;
+   color: var(--white);
+}
+.other-details h3 {
+   font-size: 18px;
+   line-height: 18px;
+   color: var(--white);
+   margin: 10px 0;
+}
+.other-details .other-date {
+   font-size: 13px;
+   color: var(--white-grey);
+}
+
 @media screen and (max-width: 768px) {
    .post.container {
       grid-template-columns: 1fr;
