--- a/post.css
+++ b/post.css
@@ -6,6 +6,11 @@
    gap: 40px;
 }
 
+.aside {
+   position: sticky;
+   top: 0;
+}
+
 .post-article {
    background-color: var(--white);
    box-shadow: var(--shadow);
@@ -121,15 +126,17 @@
    display: flex;
    align-items: center;
    justify-content: space-between;
+   flex-wrap: wrap;
    background-color: var(--white);
    box-shadow: var(--shadow);
    padding: 20px;
    margin-top: 40px;
-   gap: 20px;
+   /* gap: 20px; */
 }
 .other-posts article {
    display: flex;
    position: relative;
+   flex-basis: 32%;
 }
 .other-details {
    position: absolute;
@@ -157,6 +164,121 @@
 .other-details .other-date {
    font-size: 13px;
    color: var(--white-grey);
+}
+
+/* || AUTHEUR DE LARTICLE */
+
+.post-about {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   flex-wrap: wrap;
+   background-color: var(--white);
+   box-shadow: var(--shadow);
+   padding: 20px;
+   margin-top: 40px;
+   gap: 20px;
+   text-align: center;
+}
+
+.post-about img {
+   width: 100px;
+   height: 100px;
+   border-radius: 50%;
+}
+
+.post-about .author-name {
+   font-size: 15px;
+}
+
+/* || NOUS SUIVRE SUR LES RESEAUX */
+
+h4 {
+   width: 100%;
+   font-size: 20px;
+   padding-bottom: 10px;
+   margin-bottom: 20px;
+   border-bottom: 2px solid var(--dark);
+}
+.follow {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   background-color: var(--white);
+   box-shadow: var(--shadow);
+   padding: 20px;
+}
+
+.follow-social {
+   width: 30%;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding-right: 2px;
+   color: var(--white);
+}
+.follow-twitter {
+   background-color: #1da1f2;
+   cursor: pointer;
+}
+.follow-twitter i {
+   background-color: #2187ca;
+}
+.follow-facebook {
+   cursor: pointer;
+   background-color: #4267b2;
+}
+.follow-facebook i {
+   background-color: #3269d6;
+}
+.follow-instagram {
+   cursor: pointer;
+   background-color: #e1306c;
+}
+.follow-instagram i {
+   background-color: #a11c48;
+}
+.follow-social i {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 25px;
+   height: 25px;
+   text-align: center;
+   color: var(--white);
+}
+
+/* || POST RELATED TAGS */
+.aside .tags-grid {
+   flex-wrap: wrap;
+   background-color: var(--white);
+   box-shadow: var(--shadow);
+   padding: 20px;
+   margin-top: 40px;
+}
+.aside .tags-grid .tag {
+   color: var(--white);
+   background-color: var(--blue);
+   border-radius: 3px;
+}
+
+/* || CATEGORIES  */
+.aside-categories {
+   background-color: var(--white);
+   box-shadow: var(--shadow);
+   padding: 20px;
+   margin-top: 40px;
+}
+.aside-categories .category {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 3px;
+   font-weight: 500;
+}
+.aside-categories .category p {
 }
 
 @media screen and (max-width: 768px) {
@@ -219,6 +341,8 @@
       white-space: normal;
    }
 
+   /* || AUTRES ARTICLES */
+
    .other-tag {
       /* padding: 2px 5px; */
       font-size: 10px;
@@ -231,9 +355,17 @@
    .other-details .other-date {
       font-size: 10px;
    }
+
+   .other-posts {
+      flex-wrap: wrap;
+   }
+
+   /* || NOUS SUIVRE SUR LES RESEAUX */
+   .follow {
+      flex-wrap: wrap;
+   }
 }
 
-/* .article-details,
-.aside {
+/* .aside {
    outline: 1px solid;
 } */
